--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
-<router-outlet></router-outlet>
+<header>
+    <h1>Issue Tracker</h1>
+    <a routerLink="">Issues</a>
+    <button (click)="reset()">Reset</button>
+</header>
+
+<main>
+    <router-outlet></router-outlet>
+</main>
