--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
 <header>
     <h1>Issue Tracker</h1>
-    <a routerLink="">Issues</a>
-    <button (click)="reset()">Reset</button>
+    <a routerLink="/issues">Issues</a>
+    <div *ngIf="stats$ | async as stats">
+        <span>{{ stats.resolved }} / {{ stats.total }} resolved</span>
+        <button (click)="reset()">Reset</button>
+    </div>
 </header>
 
 <main>
