--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,11 +15,12 @@ header {
     }
 
     h1,
-    a {
+    a,
+    span {
         margin: 0 24px 0 0;
     }
 
-    button {
+    div {
         margin-left: auto;
     }
 }
