--- a/src/app/settings/settings.component.html
+++ b/src/app/settings/settings.component.html
@@ -1,13 +1,16 @@
 <h2>Settings</h2>
 <label for="priority">Notification Priority</label>
-<select
-    #prioritySelect
-    [value]="notificationPriority$ | async"
-    formControlName="priority"
-    id="priority"
-    (change)="changeNotificationPriority(prioritySelect.value)"
->
-    <option value="low">Low</option>
-    <option value="medium">Medium</option>
-    <option value="high">High</option>
-</select>
+
+<form [formGroup]="notificationsForm">
+    <select
+        #prioritySelect
+        [value]="notificationPriority$ | async"
+        formControlName="priority"
+        id="priority"
+        (change)="changeNotificationPriority(prioritySelect.value)"
+    >
+        <option value="low">Low</option>
+        <option value="medium">Medium</option>
+        <option value="high">High</option>
+    </select>
+</form>
